use existing site_theme config openrightsgroup/blocked-org-uk#410

--- a/BlockedFrontend/templates/blocked-uk/BasicPage.page.html
+++ b/BlockedFrontend/templates/blocked-uk/BasicPage.page.html
@@ -1,6 +1,6 @@
 {%import "chunks.part.html" as chunks %}
 {%import "remotecontent.part.html" as rmt %}
-{%import "theme/" ~ config.THEME ~ ".theme.html" as theme %}
+{%import "theme/" ~ config.SITE_THEME ~ ".theme.html" as theme %}
 {#
 
 Behaviour variables:
