--- a/BlockedFrontend/templates/chunks.part.html
+++ b/BlockedFrontend/templates/chunks.part.html
@@ -76,7 +76,7 @@
 
 
 {% macro main_menu() %}
-{# TODO: move to CMS #}}
+{# TODO: move to CMS #}
 <a class="{{ 'active' if request.path == '/' else ''}}" href="/">Home</a>
 {% if config.MODULE_CATEGORY %}
 <a class="{{ 'active' if request.path.startswith( ('/blocked-sites','/site','/check','/unblock','/thanks')) else ''}}" href="/sites">Blocked Sites</a>
