--- a/BlockedFrontend/templates/chunks.part.html
+++ b/BlockedFrontend/templates/chunks.part.html
@@ -126,5 +126,5 @@
             <a class="" href="{{ default_vhost }}/support">Get involved</a>
             <a class="" href="https://www.openrightsgroup.org/donate/">Donate</a>
             <a class="" href="https://www.openrightsgroup.org/contact/">Contact</a>
-            <a class="" href="https://www.openrightsgroup.org/privacy/">Privacy Policy</a>
+            <a class="" href="https://www.openrightsgroup.org/privacy-policy/">Privacy Policy</a>
 {% endmacro %}
