typofix openrightsgroup/blocked-org-uk#414

--- a/BlockedFrontend/templates/chunks.part.html
+++ b/BlockedFrontend/templates/chunks.part.html
@@ -80,7 +80,7 @@
 <a class="{{ 'active' if request.path == '/' else ''}}" href="/">Home</a>
 
 {% if config.SITE_THEME == 'blocked-eu' %}
-{{ menu_link("Check site", "/check-site" }}
+{{ menu_link("Check site", "/check-site") }}
 {% endif %}
 
 {% if config.MODULE_CATEGORY %}
