--- a/BlockedFrontend/templates/admin/admin.html
+++ b/BlockedFrontend/templates/admin/admin.html
@@ -13,7 +13,7 @@
 <div class="col-md-6">
 <div class="well">
     <h2>CMS</h2>
-    <a href="{{ config.REMOTE_SRC }}" class="btn btn-default btn-lg">Open Cockpit CMS</a>
+    <a href="{{ config.REMOTE_SRC }}/" class="btn btn-default btn-lg">Open Cockpit CMS</a>
 </div>
 
 <div class="well">
