--- a/BlockedFrontend/templates/admin/ispreports_email.html
+++ b/BlockedFrontend/templates/admin/ispreports_email.html
@@ -106,6 +106,10 @@ $(document).ready(function(){
 
 
     <p style="margin-top: 1em; font-size: larger; font-style: italic" class="well">&ldquo;{{report.message}}&rdquo;</p>
+    {% if report.allow_publish %}
+    <p><a class="btn btn-default btn-lg" href="{{ url_for('.ispreports_unpublish', url=urlobj.url) }}">Unpublish message</a></p>
+    {% endif %}
+
 
 </div>
 {% endmacro %}
