--- a/BlockedFrontend/templates/cms/personal-stories-index.html
+++ b/BlockedFrontend/templates/cms/personal-stories-index.html
@@ -23,6 +23,18 @@
 </div>
 {% endfor %}
 
+{% if chunks['personal-stories-contact']|default(None) %}
+
+<div class="row">
+    <div class="col-md-12">
+        <div class="well">
+            {{ chunks['personal-stories-contact'] }}
+        </div>
+    </div>
+</div>
+
+{% endif %}
+
 <div class="row shaded-row">
 {{ chunks.contactChunk() }}
 </div>
