--- a/BlockedFrontend/templates/stats/stats.html
+++ b/BlockedFrontend/templates/stats/stats.html
@@ -91,7 +91,7 @@ th.num {
 
 {% macro data_table(source, id=None, hide=None, viewlink=reportslink_none) %}
          <table id="{{ id }}" class="table table-striped table-condensed stats-table">
-            {% set header = source.next() %}
+            {% set header = next(source) %}
             <tr>
                 <th class="col-md-4">{{ header[0] }}</th>
                 {% for col in header[1:] %}
