--- a/BlockedFrontend/templates/site/site.html
+++ b/BlockedFrontend/templates/site/site.html
@@ -322,7 +322,7 @@ Your feedback was successfully submitted.
         <h3>451 Unavailable</h3>
         <p><a href="https://www.451unavailable.org/what-is-error-451/" title="About Error 451">Error 451</a> is the status code for content which has been made unavailable for legal reasons.</p>
         <p>Status pages for <strong>{{ url|noproto }}</strong> are available for the 
-        {% for network,order in judgment_orders.iteritems() %}
+        {% for network,order in judgment_orders.items() %}
         {% if loop.last %} and {% endif %}
         {{ err451_link(url, order.network_name) }}
         {%- if not loop.last %}, {% endif %}
