--- a/BlockedFrontend/templates/admin/ispreport_stats.html
+++ b/BlockedFrontend/templates/admin/ispreport_stats.html
@@ -101,7 +101,7 @@
 {% endfor %}
 <th class="num">Total</th>
 </tr>
-{% for header,iter in isp_stats|groupby('0.3') %}
+{% for header,iter in isp_stats|groupby_none('0.3') %}
 {% for grp, yeardata in iter %}
 <tr>
 <td>{{ grp[2] }}</td>
