--- a/BlockedFrontend/templates/admin/ispreports_email.html
+++ b/BlockedFrontend/templates/admin/ispreports_email.html
@@ -378,7 +378,7 @@ $(document).ready(function(){
                     <label class="control-label" for="category_id">Assign existing Category</label>
                     <select class="form-control" name="add_category_id">
                         <option value="" selected>(None)</option>
-                        {% for group in all_categories|groupby('1') %}
+                        {% for group in all_categories|groupby_none('1') %}
                         <optgroup label="{{ group.grouper }}">
                             {% for cat in group.list %}
                             <option value="{{cat.0}}" >{{ cat.2 }}</option>
