--- a/BlockedFrontend/templates/admin/ispreports_email.html
+++ b/BlockedFrontend/templates/admin/ispreports_email.html
@@ -334,7 +334,7 @@ $(document).ready(function(){
                     </div>
                 </div>
                 <div class="panel-body">
-                    <p class="message" style="">{{ emails.show_message(selected_msg) }}</p>
+                    <p class="message" style="">{{ emails.show_message(selected_body) }}</p>
                 </div>
             </div>
             {% endif %}
