--- a/BlockedFrontend/templates/cms/bbfc_report_view.html
+++ b/BlockedFrontend/templates/cms/bbfc_report_view.html
@@ -35,7 +35,7 @@
 {% for emailobj, message in messages %}
 <div>Received: {{ emailobj.created|fmtime }}</div>
 <pre>
-    {{ emails.show_message(message, truncate=True) }}
+    {{ emails.show_message(emailobj.get_text_body(message), truncate=True) }}
 </pre>
 {% endfor %}
 
